- changed main content height preventing white gap after footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -169,7 +169,7 @@ article {
 	max-width: $content-width;
 	margin: 0 auto;
 	padding: 0;
-	min-height: 40vh;	
+	min-height: 50vh;	
 }
 
 .MainContent {
